--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.1.7",
     "jotai": "^2.8.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.358.0",
